# vectordb

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml  typos.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: README.md
docs/core/: databases.md  dataloaders.md  shared-utils.md  vectordb.md
docs/haystack/: agentic-rag.md  components.md  contextual-compression.md  cost-optimized-rag.md  diversity-filtering.md  hybrid-indexing.md  json-indexing.md  metadata-filtering.md  mmr.md  multi-tenancy.md  namespaces.md  overview.md  parent-document-retrieval.md  query-enhancement.md  reranking.md  semantic-search.md  sparse-indexing.md  utils.md
docs/langchain/: agentic-rag.md  components.md  contextual-compression.md  cost-optimized-rag.md  diversity-filtering.md  hybrid-indexing.md  json-indexing.md  metadata-filtering.md  mmr.md  multi-tenancy.md  namespaces.md  overview.md  parent-document-retrieval.md  query-enhancement.md  reranking.md  semantic-search.md  sparse-indexing.md  utils.md
docs/reference/: config-reference.md  public-api.md
src/vectordb/: README.md  __init__.py  chroma.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
src/vectordb/databases/: README.md  __init__.py  chroma.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
src/vectordb/dataloaders/: README.md  __init__.py  arc.py  base.py  catalog.py  converters.py  dataset.py  earnings_calls.py  evaluation.py  factory.py  factscore.py  loaders.py  popqa.py  prompts.py  triviaqa.py  types.py  utils.py
src/vectordb/haystack/: README.md  __init__.py  chroma.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
src/vectordb/langchain/: README.md  __init__.py
src/vectordb/utils/: README.md  __init__.py  chroma_document_converter.py  config.py  config_loader.py  evaluation.py  ids.py  logging.py  output.py  pinecone_document_converter.py  qdrant_document_converter.py  scope.py  sparse.py  weaviate_document_converter.py
tests/: __init__.py  conftest.py  test_chroma.py  test_chroma_document_converter.py  test_logging.py  test_milvus.py  test_pinecone.py  test_pinecone_document_converter.py  test_qdrant.py  test_weaviate.py  test_weaviate_document_converter.py
tests/databases/: __init__.py  conftest.py  test_chroma.py  test_milvus.py  test_pinecone.py  test_qdrant.py  test_weaviate.py
tests/dataloaders/: __init__.py  conftest.py  test_arc_loader.py  test_catalog.py  test_converters.py  test_earnings_calls_loader.py  test_evaluation_extractor.py  test_factory.py  test_factscore_loader.py  test_integration_arc.py  test_integration_earnings_calls.py  test_integration_factscore.py  test_integration_popqa.py  test_integration_triviaqa.py  test_loaded_dataset.py  test_loaders.py  test_popqa_loader.py  test_triviaqa_loader.py  test_utils.py
tests/dataloaders/haystack/: __init__.py  conftest.py  test_arc.py  test_earnings_calls.py  test_factscore.py  test_popqa.py  test_triviaqa.py
tests/dataloaders/langchain/: __init__.py  conftest.py  test_arc.py  test_earnings_calls.py  test_factscore.py  test_popqa.py  test_triviaqa.py
tests/haystack/: __init__.py  conftest.py
tests/haystack/agentic_rag/: __init__.py  test_agentic_rag.py  test_base_agentic_rag.py  test_chroma_agentic_rag.py  test_error_handling.py  test_milvus_agentic_rag.py  test_pinecone_agentic_rag.py  test_qdrant_agentic_rag.py  test_weaviate_agentic_rag.py
tests/haystack/components/: __init__.py  test_agentic_router.py  test_context_compressor.py  test_evaluators.py  test_query_enhancer.py  test_result_merger.py
tests/haystack/contextual_compression/: __init__.py  conftest.py  test_base.py  test_base_indexing.py  test_chroma_compression.py  test_chroma_indexing.py  test_compression_utils.py  test_evaluation.py  test_milvus_compression.py  test_milvus_indexing.py  test_pinecone_compression.py  test_pinecone_indexing.py  test_qdrant_compression.py  test_qdrant_indexing.py  test_weaviate_compression.py  test_weaviate_indexing.py
tests/haystack/cost_optimized_rag/: __init__.py  conftest.py  test_chroma_cost_optimized_rag.py  test_milvus_cost_optimized_rag.py  test_pinecone_cost_optimized_rag.py  test_qdrant_cost_optimized_rag.py  test_utils_and_config.py  test_weaviate_cost_optimized_rag.py
tests/haystack/diversity_filtering/: __init__.py  test_config_loader.py  test_prompts.py
tests/haystack/hybrid_indexing/: __init__.py  conftest.py  test_chroma_hybrid.py  test_milvus_hybrid.py  test_pinecone_hybrid.py  test_qdrant_hybrid.py  test_weaviate_hybrid.py
tests/haystack/json_indexing/: __init__.py  test_chroma_json.py  test_json_indexing.py  test_milvus_json.py  test_pinecone_json.py  test_qdrant_json.py  test_weaviate_json.py
tests/haystack/metadata_filtering/: __init__.py  conftest.py  test_chroma.py  test_chroma_metadata.py  test_common_utilities.py  test_milvus.py  test_milvus_metadata.py  test_milvus_pipeline.py  test_pinecone_metadata.py  test_pinecone_pipeline.py  test_pipelines.py  test_qdrant_metadata.py  test_qdrant_pipeline.py  test_vectordb_pipeline_type.py  test_weaviate.py  test_weaviate_metadata.py
tests/haystack/mmr/: __init__.py  base.py  test_chroma_mmr.py  test_milvus_mmr.py  test_pinecone_mmr.py  test_qdrant_mmr.py  test_weaviate_mmr.py
tests/haystack/multi_tenancy/: __init__.py  conftest.py  test_base.py  test_chroma_multitenancy.py  test_milvus_multitenancy.py  test_pinecone_multitenancy.py  test_qdrant_multitenancy.py  test_tenant_context.py  test_vectordb_multitenancy_type.py  test_weaviate_multitenancy.py
tests/haystack/namespaces/: __init__.py  conftest.py  test_chroma_collections.py  test_chroma_namespaces.py  test_milvus_namespaces.py  test_pinecone_namespaces.py  test_qdrant_namespaces.py  test_types.py  test_utils.py  test_weaviate_namespaces.py
tests/langchain/: __init__.py  conftest.py
tests/utils/: __init__.py  conftest.py  test_config.py  test_evaluation.py  test_ids.py  test_logging.py  test_output.py  test_scope.py  test_sparse.py
(+1640 files in other folders)
