[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project]
name = "vectordb"
version = "1.0.0"
description = 'Vector Databases for NLP datasets.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Ashwin Mathur", email = "" },
  { name = "Varun Mathur", email = "" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
]
dependencies = [
  "pinecone[grpc]>=8.0.0,<9.0.0",
  "weaviate-client>=4.16.7,<4.16.8",
  "chromadb>=1.4.1,<2.0.0",
  "pysqlite3-binary",
  "langchain",
  "langchain-core",
  "langchain-community",
  "langchain-huggingface",
  "langchain-qdrant>=1.1.0,<2.0.0",
  "langchain-chroma>=1.1.0,<2.0.0",
  "langchain-weaviate>=0.0.6,<1.0.0",
  "haystack-ai",
  "sentence-transformers",
  "fastembed-haystack",
  "langchain-text-splitters>=1.1.0",
  "datasets>=4.5.0",
  "pymilvus>=2.5.18,<3.0.0",
  "qdrant-client>=1.16.2,<2.0.0",
  "langchain-groq>=1.1.1",
  "psutil>=6.0.0",
  "click>=8.1.0",
  "pyarrow>=14.0.0",
  "accelerate",
  "weave>=0.50.0",
]

[project.urls]
Documentation = "https://github.com/avnlp/vectordb#readme"
Issues = "https://github.com/avnlp/vectordb/issues"
Source = "https://github.com/avnlp/vectordb"

[dependency-groups]
dev = [
  "bandit>=1.9.3",
  "coverage[toml]>=7.13.0",
  "mypy>=1.19.1",
  "pip-audit>=2.10.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "pytest-socket>=0.7.0",
  "ruff>=0.14.14",
  "typos>=1.42.3",
]

[tool.uv]
default-groups = ["dev"]
override-dependencies = ["multiprocess>=0.70.19", "dill>=0.4.1"]


[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = false
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
allow_subclassing_any = false
allow_untyped_calls = false
allow_incomplete_defs = false
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = false
implicit_reexport = false
strict_equality = true
extra_checks = true
mypy_path = "src"
disable_error_code = ["operator", "untyped-decorator", "union-attr", "attr-defined", "misc"]

[[tool.mypy.overrides]]
module = [
  "pytest.*",
  "numpy.*",
  "datasets",
  "fsspec",
  "langchain",
  "langchain.*",
  "langchain_text_splitters",
  "langchain_text_splitters.*",
  "langchain_groq",
  "langchain_groq.*",
  "langchain_community",
  "langchain_community.*",
  "langchain_chroma",
  "langchain_chroma.*",
  "langchain_weaviate",
  "langchain_weaviate.*",
  "pymilvus",
  "pymilvus.*",
  "qdrant_client",
  "qdrant_client.*",
  "pinecone",
  "pinecone.*",
  "weaviate",
  "weaviate.*",
  "chromadb",
  "chromadb.*",
  "cohere",
  "cohere.*",
  "optimum",
  "optimum.*",
  "pysqlite3",
  "sklearn",
  "sklearn.*",
  "weave",
  "weave.*",
  "dataloaders",
  "dataloaders.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "vectordb.langchain.*",
  "vectordb.haystack.*",
  "vectordb.databases.*",
]
follow_imports = "skip"
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 88
include = ["*.py", "pyproject.toml", "*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "COM", # flake8-commas
  "C4",  # flake8-comprehensions
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "ICN", # flake8-import-conventions
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "W",   # pycodestyle
  "N",   # pep8-naming
  "ERA", # eradicate
  "PL",  # pylint
]
ignore = [
  "B905",    # `zip()` without an explicit `strict=` parameter
  "E501",    # line too long
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "PLR2004", # Replace magic number with named constant
  "PLR0913", # Too many arguments
  "COM812",  # Missing trailing comma
  "ERA001",  # Found commented-out code
  "A001",    # Ignore variable `input` is shadowing a Python builtin
  "A002",    # Ignore variable `input` is shadowing a Python builtin in function
  "D301",    # r-strings for docstrings with backslashes
  "PLC0415", # Allow inline imports for optional dependencies
  "PLR0912", # Too many branches (in complex filter/interactive functions)
  "PLR0915", # Too many statements (in complex interactive functions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"tests/*" = ["D103", "D105", "D107"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
known-first-party = ["vectordb"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--disable-socket -q -ra -n auto --dist loadscope -m 'not integration'"
markers = [
  "integration: Integration test that requires external services (Databases, APIs)",
  "slow: Slow running tests",
  "enable_socket: Enable socket access for this test (integration tests only)",
]
log_cli = false
asyncio_mode = "auto"

[tool.coverage.run]
source_pkgs = ["vectordb"]
omit = ["tests/*", "*/__init__.py"]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["/tests", "/.venv", "/build", "/dist"]
skips = ["B101"]
